--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
-# Empty CSS file for your own CSS
+.body_bg{ background: url(../images/bg.jpg) repeat; width:100%;}
+
+.center_div{    background-color: #f3f3f3;
+    margin: 17px auto;
+    box-shadow: 0px 0px 2px #ddd;
+    overflow: hidden;
+    display: table;
+    float: none;padding: 25px 0;}
+	
+	.form_logo{ margin:0 auto; display:table}
