--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -8,3 +8,8 @@
     float: none;padding: 25px 0;}
 	
 	.form_logo{ margin:0 auto; display:table}
+
+.has-error
+{
+	border-color: #a94442 !important;	
+}
